Update Driver.java
COPIED IN FROM THE ONE WE GOT WORKING ON THE COMMAND LINE IN OFFICE HOURS WITH RAKAN